2013-04-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 3.4.1.

2013-04-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.4.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Set version to 3.4.0, switch version scheme.

2013-04-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r15971. Patch by Matthew Mundell.

	* src/log.c (log_init): Print fail messages about log file to stderr, so
	that tools wanting to parse "openvassd -s" output can separate out the
	the actual settings.

2013-04-11  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Increase GnuTLS dependency from 2.2 to 2.8.

2013-04-11  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Note increased GnuTLS dependency.

2013-03-18  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 3.4+rc2.

2013-03-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Preparing the openvas-scanner 3.4+rc1 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Set version to 3.4+rc1.

2013-03-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r15613. Patch by Hani Benhabiles.

	* src/comm.c (plugin_is_newstyle): Remove function. Now part of
	plugutils.c in libraries.

2013-03-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r15610. Patch by Matthew Mundell.

	* src/nasl_plugins.c (plugin_is_newstyle): Check tag in case it is NULL.
	Also move &&'s to front of line for consistency.

2013-03-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r15596. Patch by Hani Benhabiles.

	* src/comm.c (send_plug_info): Send NOSUMMARY instead of whole summary
	when script tag summary is present.
	(plug_is_newstyle): Rename to plugin_is_newstyle.

2013-03-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r15594. Patch by Hani Benhabiles.
