@@ -1,3 +1,14 @@
+2014-02-06  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	Backport r18690 and r18700, adjusted accordingly.
+
+	* src/attack.c: Include misc/network.h. Remove getpts extern
+	declaration.
+	(attack_network): Validate port_range with validate_port_range().
+
+	* src/plugs_req.c (get_closed_udp_ports): Call kb_get_port_state_proto()
+	only for valid port numbers.
+
 2013-04-11  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	Post release version bump.
